--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -1,85 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-{% block head %}
-{% endblock %}
-    {% if title %}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Titillium+Web:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/main.css') }}"
+    />
+    {% block head %} {% endblock %} {% if title %}
     <title>ActivMates - {{ title }}</title>
     {% else %}
     <title>ActivMates</title>
     {% endif %}
-
-</head>
-<body>
+  </head>
+  <body>
     <header>
-         <nav id="navbar"class="navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
-              <!-- can i put and if signed in href = search page ???? -->
-              <a class="navbar-brand" href="{{ url_for('home') }}">ActivMates</a> 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  
-                  {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('home') }}">Search</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('new_activity') }}">Post an activity</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('account_profile') }}">Profile</a>
-                    </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                      </li>
-                  {% else %}  
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('sign_up') }}">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                    </li>
-                  {% endif %}
-                  
-                </ul>
-              </div>
-            </div>
-          </nav> 
+      <nav id="navbar" class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+          <!-- can i put and if signed in href = search page ???? -->
+          <a class="navbar-brand" href="{{ url_for('home') }}">ActivMates</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('home') }}">Search</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('new_activity') }}"
+                  >Post an activity</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('account_profile') }}"
+                  >Profile</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('sign_up') }}">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    
+
     <div class="container-fluid">
-      
-      <div class="row ">
+      <div class="row">
+        <div class="col"></div>
         <div class="col">
+          {% with messages = get_flashed_messages(with_categories=true)%} {% if
+          messages %} {% for category, message in messages %}
+          <div class="alert alert-{{ category }} ">{{ message }}</div>
+          {% endfor%} {% endif %} {% endwith %}
         </div>
-        <div class="col">
-          {% with messages = get_flashed_messages(with_categories=true)%}
-            {% if messages %}
-              {% for category, message in messages %}
-              <div class="alert alert-{{ category }} ">
-                {{ message }}
-              </div>
-              {% endfor%}
-            {% endif %}
-         {% endwith %}
-        </div>
-        <div class="col">
-        </div>
+        <div class="col"></div>
       </div>
     </div>
-  {% block body %}{% endblock %}
-   
+    {% block body %}{% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
