--- a/activmatesApp/templates/sign-up.html
+++ b/activmatesApp/templates/sign-up.html
@@ -1,84 +1,75 @@
-{% extends 'layout.html' %}
-
-
-
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 <div class="row">
-	<div class="col mt-3">        
-		<form action="" method="POST">
-			{{ form.hidden_tag() }}
-			<fieldset class="form-control d-grid gap-3">
-					<legend>
-							Sign-up to get started!
-					</legend>
-					<div class="form-group username">
-							{% if form.username.errors %}
-							{{ form.username(class="form-control-label is-invalid", placeholder="Username") }}
-							<div class="invalid-feedback">
-								{% for error in form.username.errors %}
-								<span>{{ error }}</span>
-								{% endfor %}
-							</div>
-							{% else %}
-							{{ form.username(class="form-control-label", placeholder="Username") }}
-							{% endif %}
-					</div>
-					<div class="form-group email">
-							{% if form.email.errors %}
-							{{ form.email(class="form-control-label is-invalid", placeholder="Email") }}
-							<div class="invalid-feedback">
-									{% for error in form.email.errors %}
-									<span>{{ error }}</span>
-									{% endfor %}
-							</div>
-							{% else %}
-							{{ form.email(class="form-control-label", placeholder="Email") }}
-
-							{% endif %}
-					</div>
-					<div class="form-group password">
-							{% if form.password.errors %}
-							{{ form.password(class="form-control-label is-invalid", placeholder="Password") }}
-							<div class="invalid-feedback">
-									{% for error in form.password.errors %}
-									<span>{{ error }}</span>
-									{% endfor %}
-							</div>
-							{% else %}
-							{{ form.password(class="form-control-label", placeholder="Password") }}
-
-							{% endif %}
-					</div>
-					<div class="form-group confirm-password">
-							{% if form.confirm_password.errors %}
-							{{ form.confirm_password(class="form-control-label is-invalid", placeholder="Confirm Password") }}
-							<div class="invalid-feedback">
-									{% for error in form.confirm_password.errors %}
-									<span>{{ error }}</span>
-									{% endfor %}
-							</div>
-							{% else %}
-							{{ form.confirm_password(class="form-control-label", placeholder="Confirm Password") }}
-
-							{% endif %}
-					</div>
-					<div class="form-group">
-							{{ form.submit(class="btn btn-outline-info")}}
-					</div>
-			</fieldset>
-		</form>
-		<div class="border-top pt-3">
-				<small class="text-muted">
-						Already have an account? <a class="ml-2" href="{{ url_for('login')}}">Sign In</a>
-				</small>
-		</div>
+  <div class="col mt-3">
+    <form action="" method="POST">
+      {{ form.hidden_tag() }}
+      <fieldset class="form-control d-grid gap-3">
+        <legend>Sign-up to get started!</legend>
+        <div class="form-group username">
+          {% if form.username.errors %} {{
+          form.username(class="form-control-label is-invalid",
+          placeholder="Username") }}
+          <div class="invalid-feedback">
+            {% for error in form.username.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.username(class="form-control-label",
+          placeholder="Username") }} {% endif %}
+        </div>
+        <div class="form-group email">
+          {% if form.email.errors %} {{ form.email(class="form-control-label
+          is-invalid", placeholder="Email") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.email(class="form-control-label",
+          placeholder="Email") }} {% endif %}
+        </div>
+        <div class="form-group password">
+          {% if form.password.errors %} {{
+          form.password(class="form-control-label is-invalid",
+          placeholder="Password") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.password(class="form-control-label",
+          placeholder="Password") }} {% endif %}
+        </div>
+        <div class="form-group confirm-password">
+          {% if form.confirm_password.errors %} {{
+          form.confirm_password(class="form-control-label is-invalid",
+          placeholder="Confirm Password") }}
+          <div class="invalid-feedback">
+            {% for error in form.confirm_password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.confirm_password(class="form-control-label",
+          placeholder="Confirm Password") }} {% endif %}
+        </div>
+        <div class="form-group">
+          {{ form.submit(class="btn btn-outline-info")}}
+        </div>
+      </fieldset>
+    </form>
+    <div class="border-top pt-3">
+      <small class="text-muted">
+        Already have an account?
+        <a class="ml-2" href="{{ url_for('login')}}">Sign In</a>
+      </small>
+    </div>
   </div>
 
-	<div class="col">
-			<!-- {% if form.validate_on_submit %} -->
-					<!-- {% block profileForm %}
+  <div class="col">
+    <!-- {% if form.validate_on_submit %} -->
+    <!-- {% block profileForm %}
 					{% endblock %} -->
-			<!-- {% endif %} -->
-	</div>
+    <!-- {% endif %} -->
+  </div>
 </div>
 {% endblock %}
