--- a/activmatesApp/templates/view-activity.html
+++ b/activmatesApp/templates/view-activity.html
@@ -1,45 +1,74 @@
-{% extends 'layout.html' %}
-
-
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 <h1>view activity page</h1>
 <h2>{{ activity.profile.id }}</h2>
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">{{ activity.title }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{ activity.type}}</h6>
-      <h6 class="card-subtitle mb-2 text-muted">{{ current_user.profile[0].id }}</h6>
-      <p class="card-text">{{ activity.description}}</p>
-      <h6> {{ activity.address }} </h6>
-      <a href="{{ url_for('user_activities', username=activity.profile.user.username) }}">other posts by user</a>
+<div class="card" style="width: 18rem">
+  <div class="card-body">
+    <h5 class="card-title">{{ activity.title }}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{ activity.type}}</h6>
+    <h6 class="card-subtitle mb-2 text-muted">
+      {{ current_user.profile[0].id }}
+    </h6>
+    <p class="card-text">{{ activity.description}}</p>
+    <h6>{{ activity.address }}</h6>
+    <a
+      href="{{ url_for('user_activities', username=activity.profile.user.username) }}"
+      >other posts by user</a
+    >
 
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-      {% if activity.profile.id == current_user.profile[0].id %}
-        <div>
-          <a href="{{ url_for('update_activity', activity_id=activity.id)}}" class="btn-secondary btn btn-sm m-1">Update</a>
-          <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
-        </div>
-      {% endif %}
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+    {% if activity.profile.id == current_user.profile[0].id %}
+    <div>
+      <a
+        href="{{ url_for('update_activity', activity_id=activity.id)}}"
+        class="btn-secondary btn btn-sm m-1"
+        >Update</a
+      >
+      <button
+        class="btn btn-danger btn-sm"
+        data-bs-toggle="modal"
+        data-bs-target="#deleteModal"
+      >
+        Delete
+      </button>
     </div>
+    {% endif %}
   </div>
-    
-<script async
-src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap">
-</script>
+</div>
+
+<script
+  async
+  src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap"
+></script>
 
 <!-- Modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="deleteModal"
+  tabindex="-1"
+  aria-labelledby="deleteModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="deleteModalLabel">Delete Post?</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <form action="{{ url_for('delete_activity', activity_id=activity.id)}}" method='POST'>
-          <input type="submit" class="btn btn-danger" value="Delete">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <form
+          action="{{ url_for('delete_activity', activity_id=activity.id)}}"
+          method="POST"
+        >
+          <input type="submit" class="btn btn-danger" value="Delete" />
         </form>
       </div>
     </div>
