--- a/activmatesApp/templates/home.html
+++ b/activmatesApp/templates/home.html
@@ -4,7 +4,7 @@
 
 {% endblock %} {% block body %}
 <h1>main search page</h1>
-<a href="{{ url_for('home_list_view') }}">list view </a>
+<a href="{{ url_for('main.home_list_view') }}">list view </a>
 <div id="map-section">
   <div id="locationField">
     <input
