--- a/activmatesApp/templates/sign-up.html
+++ b/activmatesApp/templates/sign-up.html
@@ -60,7 +60,7 @@
     <div class="border-top pt-3">
       <small class="text-muted">
         Already have an account?
-        <a class="ml-2" href="{{ url_for('login')}}">Sign In</a>
+        <a class="ml-2" href="{{ url_for('users.login')}}">Sign In</a>
       </small>
     </div>
   </div>
