--- a/activmatesApp/templates/update-account.html
+++ b/activmatesApp/templates/update-account.html
@@ -2,7 +2,7 @@
 <h1>Account</h1>
 <div class="row content-section">
   <div class="col">
-    <a class="nav-link" href="{{ url_for('account_profile') }}"
+    <a class="nav-link" href="{{ url_for('users.account_profile') }}"
       ><button class="btn info">back</button>
     </a>
     <form action="" method="POST">
