--- a/activmatesApp/templates/edit-profile.html
+++ b/activmatesApp/templates/edit-profile.html
@@ -8,7 +8,7 @@
 <h1>profile page</h1>
 <div class="row content-section">
   <div class="col mt-3">
-    <a class="nav-link" href="{{ url_for('account_profile') }}"
+    <a class="nav-link" href="{{ url_for('profiles.account_profile') }}"
       ><button class="btn info">back</button>
     </a>
 
