--- a/activmatesApp/templates/user-activities.html
+++ b/activmatesApp/templates/user-activities.html
@@ -17,7 +17,7 @@
     <p class="card-text">{{ activity.location}}</p>
 
     <a
-      href="{{ url_for('view_activity', activity_id=activity.id) }}"
+      href="{{ url_for('posts.view_activity', activity_id=activity.id) }}"
       class="card-link"
       >Card link</a
     >
@@ -30,13 +30,13 @@ left_current=1, right_current=2) %} {% if page_num %} {% if activities.page ==
 page_num %}
 <a
   class="btn btn-info mb-4"
-  href="{{ url_for('user_activities', username=user.username, page=page_num) }}"
+  href="{{ url_for('posts.user_activities', username=user.username, page=page_num) }}"
   >{{ page_num }}</a
 >
 {% else %}
 <a
   class="btn btn-info-outline mb-4"
-  href="{{ url_for('user_activities', username=user.username, page=page_num) }}"
+  href="{{ url_for('posts.user_activities', username=user.username, page=page_num) }}"
   >{{ page_num }}</a
 >
 {% endif %} {% else %} {% endif %} {% endfor %} {% endblock %}
