--- a/activmatesApp/templates/view-activity.html
+++ b/activmatesApp/templates/view-activity.html
@@ -11,7 +11,7 @@
     <p class="card-text">{{ activity.description}}</p>
     <h6>{{ activity.address }}</h6>
     <a
-      href="{{ url_for('user_activities', username=activity.profile.user.username) }}"
+      href="{{ url_for('posts.user_activities', username=activity.profile.user.username) }}"
       >other posts by user</a
     >
 
@@ -20,7 +20,7 @@
     {% if activity.profile.id == current_user.profile[0].id %}
     <div>
       <a
-        href="{{ url_for('update_activity', activity_id=activity.id)}}"
+        href="{{ url_for('posts.update_activity', activity_id=activity.id)}}"
         class="btn-secondary btn btn-sm m-1"
         >Update</a
       >
@@ -65,7 +65,7 @@
           Close
         </button>
         <form
-          action="{{ url_for('delete_activity', activity_id=activity.id)}}"
+          action="{{ url_for('posts.delete_activity', activity_id=activity.id)}}"
           method="POST"
         >
           <input type="submit" class="btn btn-danger" value="Delete" />
