--- a/activmatesApp/templates/user-activities.html
+++ b/activmatesApp/templates/user-activities.html
@@ -30,13 +30,13 @@ left_current=1, right_current=2) %} {% if page_num %} {% if activities.page ==
 page_num %}
 <a
   class="btn btn-info mb-4"
-  href="{{ url_for('posts.user_activities', username=user.username, page=page_num) }}"
+  href="{{ url_for('users.user_activities', username=user.username, page=page_num) }}"
   >{{ page_num }}</a
 >
 {% else %}
 <a
   class="btn btn-info-outline mb-4"
-  href="{{ url_for('posts.user_activities', username=user.username, page=page_num) }}"
+  href="{{ url_for('users.user_activities', username=user.username, page=page_num) }}"
   >{{ page_num }}</a
 >
 {% endif %} {% else %} {% endif %} {% endfor %} {% endblock %}
