--- a/activmatesApp/static/css/main.css
+++ b/activmatesApp/static/css/main.css
@@ -102,9 +102,32 @@ button.secondary:hover {
 #login-form fieldset {
   width: 100%;
 }
-
+.map-wrapper {
+  position: relative;
+}
+.pan-to-location-button {
+  background-color: green;
+}
 #map {
   height: 75vmin;
   width: 75%;
   margin: 0 auto;
 }
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: "Roboto", "sans-serif";
+  line-height: 30px;
+  padding-left: 10px;
+}
+.activity-card {
+  border: 1px solid #7bae7f;
+  border-radius: 25px;
+}
+
