--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -14,6 +14,8 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/main.css') }}"
