--- a/activmatesApp/templates/login.html
+++ b/activmatesApp/templates/login.html
@@ -5,98 +5,85 @@
 <div class="content-section p-5 ">
 	<div class="row">
 		<div class="col-md-8">
-				<h1>ActivMates - time to find an exercise buddy!</h1>
-				<div class="ms-4 mb-4">
-					<h4>New to a city, and want to meet people in a different way?</h4>
-					<h4>Don't feel safe running alone at night?</h4>
-					<h4>Want to learn a new sport?</h4>
-					<h4>Need someone else to motivate you?</h4>
-				</div>
-				<div class="ms-3">
-					<p class="body">
-						Sign up today to connect with someone in your area
-					</p>
-					<a href="{{ url_for('users.sign_up') }}" >
-						<button id="sign-up" class="primary">
-							Sign Up
-						</button>
-					</a>
-					<a href="{{ url_for('users.login') }}" >
-						<button id="login" class="secondary">
-								Login
-						</button>
-					</a>
-				</div>
-				<div>
-					<img src="{{ url_for('static', filename='images/open-doodles-roller-skating.png') }}" height="150px" alt="illustration of person rollerskating">
-					<img src="{{ url_for('static', filename='images/open-doodles-jumping.png') }}" height="150px" alt="illustration of person jumping">
-				</div>
+			<h1>ActivMates - time to find an exercise buddy!</h1>
+			<div class="ms-4 mb-4">
+				<h4>New to a city, and want to meet people in a different way?</h4>
+				<h4>Don't feel safe running alone at night?</h4>
+				<h4>Want to learn a new sport?</h4>
+				<h4>Need someone else to motivate you?</h4>
+			</div>
+			<div class="ms-3">
+				<p class="body">
+					Sign up today to connect with someone in your area
+				</p>
+				<a href="{{ url_for('users.sign_up') }}" >
+					<button id="sign-up" class="primary">
+						Sign Up
+					</button>
+				</a>
+			</div>
 		</div>	
 		<div class="col-md-4">
-			<div class="col-md-6">
-				{% if error %}
-						<p class=error>{{ error }} </p>
-				{% endif %}
-
-				<form action="" method="POST" id="login-form">
-					{{ form.hidden_tag() }}
-					<fieldset class="form-control d-grid gap-3">
-							<legend class="border-bottom">
-									Login
-							</legend>
-							<div class="form-group email">
-									{% if form.email.errors %}
-									{{ form.email(class="form-control-label is-invalid", placeholder="Email") }}
-									<div class="invalid-feedback">
-											{% for error in form.email.errors %}
-											<span>{{ error }}</span>
-											{% endfor %}
-									</div>
-									{% else %}
-									{{ form.email(class="form-control-label", placeholder="Email") }}
-
-									{% endif %}
-							</div>
-							<div class="form-group password">
-									{% if form.password.errors %}
-									{{ form.password(class="form-control-label is-invalid", placeholder="Password")}}
-									<div class="invalid-feedback">
-											{% for error in form.password.errors %}
-											<span>{{ error }}</span>
-											{% endfor %}
-									</div>
-									{% else %}
-									{{ form.password(class="form-control-label", placeholder="Password") }}
-									{% endif %}
-							</div>
-							<small class="text-muted ml-2">
-									<a href="{{ url_for('users.reset_request') }}">Forgot password?</a>
-							</small>
-							<div class="form-check">
-									{{ form.remember(class="form-check-input")}}
-									{{ form.remember.label(class="form-check-label")}}
-							</div>
-					
-					<div class="form-group">
-							{{ form.submit(class="btn btn-outline-info")}}
+			{% if error %}
+					<p class=error>{{ error }} </p>
+			{% endif %}
+			<div>
+				<img src="{{ url_for('static', filename='images/open-doodles-roller-skating.png') }}" height="80px" alt="illustration of person rollerskating">
+				<img src="{{ url_for('static', filename='images/open-doodles-dancing.png') }}" height="80px" class="flip-image" alt="illustration of person jumping">
+				<img src="{{ url_for('static', filename='images/open-doodles-rolling.png') }}" height="80px" height="250px" alt="illustration of person rollerskating">
+			</div>
+			<form action="" method="POST" id="login-form">
+				{{ form.hidden_tag() }}
+				<fieldset class="form-control d-grid gap-3">
+					<legend class="border-bottom">
+						Login
+					</legend>
+					<div class="form-group email">
+						{% if form.email.errors %}
+						{{ form.email(class="form-control-label is-invalid", placeholder="Email") }}
+						<div class="invalid-feedback">
+								{% for error in form.email.errors %}
+								<span>{{ error }}</span>
+								{% endfor %}
+						</div>
+						{% else %}
+							{{ form.email(class="form-control-label", placeholder="Email") }}
+						{% endif %}
 					</div>
-					</fieldset>
+					<div class="form-group password">
+						{% if form.password.errors %}
+						{{ form.password(class="form-control-label is-invalid", placeholder="Password")}}
+						<div class="invalid-feedback">
+							{% for error in form.password.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+						{% else %}
+							{{ form.password(class="form-control-label", placeholder="Password") }}
+						{% endif %}
+					</div>
+					<small class="text-muted ml-2">
+						<a href="{{ url_for('users.reset_request') }}">Forgot password?</a>
+					</small>
+					<div class="form-check">
+						{{ form.remember(class="form-check-input")}}
+						{{ form.remember.label(class="form-check-label")}}
+					</div>
+					<div class="" id="login">
+						{{ form.submit(class="secondary") }}
+					</div>
+				</fieldset>
 			</form>
 			<div class="pt-3">
-					<small class="text-muted">
-							Don't have an account yet? <a class="ml-2" href="{{ url_for('users.sign_up')}}">Sign In</a>
-					</small>
+				<small class="text-muted">
+					Don't have an account yet? <a class="ml-2" href="{{ url_for('users.sign_up')}}">Sign In</a>
+				</small>
 			</div>
-			</div>
-
 		</div>	
 	</div>
 		
 	
-		
-	
 		<div class="col-md-6">
-			<img src="{{ url_for('static', filename='images/open-doodles-rolling.png') }}" class="float-md-end me-5" height="250px" alt="illustration of person rollerskating">
 		</div>
 		<div class="col-md-6 pe-5">
 			
