--- a/activmatesApp/templates/new-activity.html
+++ b/activmatesApp/templates/new-activity.html
@@ -3,14 +3,12 @@
 <script src="{{ url_for('static', filename='javascript/map-address-field.js') }}"></script>
 
 {% endblock %} {% block body %}
-<h1>new activity page</h1>
+
 <div class="row">
   <div class="col mt-3">
-    {{ profile }} {{ current_user.id }}
-
     <form action="" method="POST">
       {{ form.hidden_tag() }}
-      <fieldset class="form-control d-grid gap-3">
+      <fieldset class=" card form-control d-grid gap-3">
         <legend>{{ legend }}</legend>
         <div class="form-group activity-title">
           {{ form.title.label() }} {% if form.title.errors %} {{
@@ -37,17 +35,17 @@
           placeholder="Type") }} {% endif %}
         </div>
         <div class="form-group address">
-          {{ form.address.label(class="form-control-label") }} {% if
+          {{ form.address.label(class="d-inline form-control-label") }} {% if
           form.address.errors %}
           <div id="addressField">
             <input
               id="autocomplete"
               placeholder="Enter your address"
               type="text"
-              class="form-control"
+              class="d-inline w-75"
             />
           </div>
-          <p id="details"></p>
+          
           <div class="invalid-feedback">
             {% for error in form.address.errors %}
             <span>{{ error }}</span>
@@ -75,12 +73,12 @@
             <span>{{ error }}</span>
             {% endfor %}
           </div>
-          {% else %} {{ form.description(class="form-control-label",
+          {% else %} {{ form.description(class="d-block form-control-label",
           placeholder="description") }} {% endif %}
         </div>
 
         <div class="form-group">
-          {{ form.submit(class="btn btn-outline-info")}}
+          {{ form.submit(class="secondary")}}
         </div>
       </fieldset>
     </form>
